console/src/components/ApiExplorer/ApiExplorer.scss
/* ... */
// Common
.responseTable {
  padding-top: 15px;

  .tableBorder {
    background-color: #fff;
    border: 1px solid #E3E5E5;

    thead {
      tr {
        th {
          border-bottom: 0px;
        }
      }
    }

    tbody {
      tr {
        td {
          border-top: 0;
          // padding: 5px;
          padding: 0px 5px;
          min-width: 50px;

          .responseTableInput {
            background-color: transparent;
            border: 0;
            box-shadow: none;
            border-radius: 0;
            // padding: 0;
          }
        }

        .headerPadd {
          padding: 15px !important;
        }

        .borderTop {
          border-top: 1px solid #ccc;
        }

        .tableTdLeft {
          padding-left: 5%;
        }

        .tableEnterKey {
          // padding: 10px 0;
          padding: 0px 5px;
          padding-left: 4.5%;
        }

        .tableLastTd {
          padding-left: 5px !important;
        }
      }
    }
  }

  .headerHeading {
    background-color: #f5f5f5;
    font-weight: bold;
    padding-left: 15px;
  }
}

.queryBuilderWrapper {
  padding-bottom: 20px;

  .queryBuilderTab {
    ul {
      border: 1px solid #E7E7E7;
      -webkit-padding-start: 0px;
      -moz-padding-start: 0px;
      display: inline-block;

      li {
        list-style-type: none;
        display: inline-block;
        padding: 12px 20px;
        width: 150px;
        text-align: center;
        color: #788094;
        cursor: pointer;
        background-color: #fff;
        font-weight: bold;
      }

      li:focus {
        outline: none;
      }

      .activeQueryBuilderTab {
        background-color: #FFF050;
      }
    }
  }
}

.AceEditorWrapper {
  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
  /*
  margin-top: 15px;
  margin-bottom: 20px;
  margin-top: 20px;
  */
}

.queryBuilderLayout {
  background-color: #fff;
  // padding: 15px;
}

.queryBuilderLayoutSub {
  padding: 20px;
}

.qbTabHeading {
  font-weight: bold;
  padding-top: 15px;
  padding-left: 20px;
  padding-bottom: 15px;

  i {
    padding-left: 5px;
  }
}


.common_checkbox {
  opacity: 0;
  position: absolute;

  .common_checkbox_label {
    display: inline-block;
    vertical-align: middle;
    margin: 0px;

    cursor: pointer;
    position: relative;
  }
}

.common_checkbox_label {
  margin-bottom: 0px !important;
  padding-top: 5px;
}

.common_checkbox + .common_checkbox_label:before {
  content: '';
  background: #fff;
  border: 1px solid #ddd;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
  padding-top: 2px;
  margin-right: 2px;
  text-align: center;
  border-radius:4px;
  cursor:pointer;
}

label {
  font-weight: normal;
}

.common_checkbox:checked + .common_checkbox_label:before {
    content: url('./tick.png');
    background: #FFCA27;
    color: #fff;
    padding-top:0px;
}

.authPanelSubHeadings {
  font-size: 16px;
  font-weight: italic;
  padding-left: 15px;
  padding-bottom: 10px;
}

.apiResponseTab {
  padding-top: 20px;

  .apiResponseTabUl {
    display: inline-block;
    -webkit-padding-start: 0px;
    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);

    .apiResponseTabList {
      display: inline-block;
      padding: 15px 25px;
      list-style-type: none;
      background-color: #fff;
      font-weight: 600;
      color: #6B6B6B;
      cursor: pointer;
    }

    .apiResponseTabList:focus {
      outline: none;
    }

    .activeApiResponseTab {
      background-color: #FFF3D5
    }
  }

  .apiResponseTabPanel {
    .AceEditorWrapper {
      margin-top: 15px;
      margin-bottom: 15px;
    }
  }


}

